RESOLVED FIXED273678
ImageBuffer should not have canMapBackingStore
https://bugs.webkit.org/show_bug.cgi?id=273678
Summary ImageBuffer should not have canMapBackingStore
Kimmo Kinnunen
Reported 2024-05-03 02:34:43 PDT
ImageBuffer should not have canMapBackingStore. It ties the RemoteImageBufferProxy::create<Backend>() to the Backend, but GPUP is the one that decides which Backend is appropriate.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-03 02:35:08 PDT
Kimmo Kinnunen
Comment 2 2024-05-03 02:41:15 PDT
EWS
Comment 3 2024-05-07 00:59:41 PDT
Committed 278445@main (8d2e51d04796): <https://commits.webkit.org/278445@main> Reviewed commits have been landed. Closing PR #28089 and removing active labels.
Jonathan Bedard
Comment 4 2024-05-07 07:15:15 PDT
Reopened Bugzilla. Broke the visionOS build, tracking revert in https://bugs.webkit.org/show_bug.cgi?id=273822.
Kimmo Kinnunen
Comment 5 2024-05-16 01:08:39 PDT
Build break fixed in bug 273825
Note You need to log in before you can comment on or make changes to this bug.